product listing updated to add a filter
filter added with availability options

--- a/homepage.html
+++ b/homepage.html
@@ -32,11 +32,11 @@
         <a href="homepage.html"> <img class="logo" src="logo.png"></a>
 
         <ul >
-        <li><a   href="">about us</a></li>
-        <li><a   href="">Sell</a></li>
-        <li><a   href="">Accessories</a></li>
-        <li><a   href="">Equipment</a></li>
-        <li><a   href="">Jerseys</a></li>
+        <li><a href="">about us</a></li>
+        <li><a href="">Sell</a></li>
+        <li><a href="">Accessories</a></li>
+        <li><a href="">Equipment</a></li>
+        <li><a href="product listing.html">Jerseys</a></li>
         </ul>
     </div>
 
