--- a/product listing.html
+++ b/product listing.html
@@ -58,7 +58,24 @@
 </header>
 
 
+<main  class="store-container">
 
+    /*=============CREATING FILTER=================*/
+    <aside class="filters">
+        <h2>Filters</h2>
+
+        <label>Availability</label>
+        <select>
+            <option>In stock</option>
+            <option>Out of stock</option>
+        </select>
+
+        
+
+
+
+
+</main>
 
 
 
@@ -110,9 +127,7 @@
 
 </footer>
 
-<main>
-    
-</main>
+
 
 
 
