--- a/product detail.html
+++ b/product detail.html
@@ -29,7 +29,7 @@
    <nav class="navbar">
    
     <div class="left">
-        <a href="homepage.html"> <img class="logo" src="logo.png"></a>
+        <a href="homepage.html"> <img class="logo" src="images/logo.png"></a>
 
         <ul >
         <li><a   href="">about us</a></li>
@@ -45,10 +45,10 @@
 
      <div class="right">
         
-       <a  href="homepage.html"><img style="height: 34px" src="home icon.png"></a>
-       <a  href=""><img style="height: 33px" src="search icon.png"></a>
-       <a  href=""><img style="height: 38px" src="profile icon.png"></a>
-       <a  href=""><img style="height: 36px" src="cart.png"></a>
+       <a  href="homepage.html"><img style="height: 34px" src="images/home icon.png"></a>
+       <a  href=""><img style="height: 33px" src="images/search icon.png"></a>
+       <a  href=""><img style="height: 38px" src="images/profile icon.png"></a>
+       <a  href=""><img style="height: 36px" src="images/cart.png"></a>
 
 
     </div>
@@ -56,7 +56,13 @@
     </nav>
 
 </header>
-<main>
+
+
+
+<main class="productpage">
+    <section class="productcontainer">
+        <div class="pimages"></div>
+    </section>
 
 
 
@@ -64,7 +70,11 @@
 
 
 
-    
+
+
+
+
+
 </main>
 
 
@@ -78,7 +88,7 @@
 <p>Awards and Badges</p>
 
 <div class="footlogo">
-    <a href="homepage.html"> <img src="logo.png"></a>
+    <a href="homepage.html"> <img src="images/logo.png"></a>
 </div>
 
 
