product images displayed
jersey shown

--- a/product detail.html
+++ b/product detail.html
@@ -61,7 +61,22 @@
 
 <main class="productpage">
     <section class="productcontainer">
-        <div class="pimages"></div>
+        <div class="productimages">
+            <img src="images/AI IMAGE OF JERSEY.png" class="largeimage" alt="product">
+            <div class="moreimage">
+                <img src="images/AI image jersey close up.png"  alt="">
+                <img src="images/close up jersey.png" alt="">
+                <img src="images/diff pose of jersey ai.png" alt="">
+            </div>
+        </div>
+
+
+
+
+
+
+
+
     </section>
 
 
