unique feature added
unique feature page initialised by adding header and footer

--- a/product detail.html
+++ b/product detail.html
@@ -92,13 +92,14 @@
         <li>Relaxed/Baggy fit</li>
     </ul>
     <p class="stock">Item is in stock</p>
-
+        <div class="buttons">
             <button class="addtocart">ADD TO CART</button>
             <button class="buy">BUY IT NOW</button>
-
+        </div>
             <h3>You May Also Like:</h3>
 
             <div class="suggestions">
+
                 <img src="images/youmaylike1.png" alt="">
                 <img src="images/youmaylike2.png" alt="">
             </div>
