photos upload secton
added feature for user to upload photos

--- a/Uniquefeature.html
+++ b/Uniquefeature.html
@@ -14,17 +14,18 @@
 
 
 
+<main>
 
 
 
 
 
-
+</main>
 
 
 
 </head>
-<body>
+<body class="uniquefeature">
 <header >
    <nav class="navbar">
    
@@ -58,8 +59,45 @@
 </header>
 
 
+
 <main>
-    
+    <div class="maincontainer">
+        <div class="photosection">
+            <label for="covershot">
+                <input type="file" id="cover-shot" accept="image/*">
+                <div class="upload">+ Covershot</div>
+            </label>
+            <div class="otherphotos">
+                <label for="photo1">
+                    <input type="file" id="photo1" accept="image/*">
+                    <div class="uploadbox">+ Image</div>
+                </label>
+                <label for="photo2">
+                    <input type="file" id="photo2" accept="image/*">
+                    <div class="uploadbox">+ Image</div>
+                </label>
+                <label for="photo3">
+                    <input type="file" id="photo3" accept="image/*">
+                    <div class="uploadbox">+ Image</div>
+                </label>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 </main>
