full page added
unique features body added with coverphoto space and entry by user space

--- a/Uniquefeature.html
+++ b/Uniquefeature.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Baller's Basket</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="uniquefeature.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap" rel="stylesheet">
@@ -70,31 +70,36 @@
             <div class="otherphotos">
                 <label for="photo1">
                     <input type="file" id="photo1" accept="image/*">
-                    <div class="uploadbox">+ Image</div>
+                    <div class="upload">+ Image</div>
                 </label>
                 <label for="photo2">
                     <input type="file" id="photo2" accept="image/*">
-                    <div class="uploadbox">+ Image</div>
+                    <div class="upload">+ Image</div>
                 </label>
                 <label for="photo3">
                     <input type="file" id="photo3" accept="image/*">
-                    <div class="uploadbox">+ Image</div>
+                    <div class="upload">+ Image</div>
                 </label>
             </div>
         </div>
 
+        <div class="detailssection">
+            <h2>What are you selling</h2>
+            <form>
+                <label for="category">Category</label>
+                <input type="text" id="category" name="category">
 
+                <label for="quantity">Quantity</label>
+                <input type="number" id="quantity" name="quantity">
 
+                <label for="price">Price</label>
+                <input type="text" id="price" name="price">
 
-
-
-
-
-
-
-
-
-
+                <label for="size">Size</label>
+                <input type="text" id="size" name="size">
+            </form>
+        </div>
+    </div>
 
 
 
