--- a/loginpage.html
+++ b/loginpage.html
@@ -48,6 +48,40 @@
 </header>
 
 
+<main>
+
+<div>
+    <form action="">
+        <h1>LOGIN</h1>
+
+        <div class="input">
+            <input type="text" placeholder="username" required>
+        </div>
+
+        <div class="input">
+            <input type="password" placeholder="password" required>
+        </div>
+
+        <div class="remember-forgot">
+            <label><input type="checkbox" >Remember Me</label>
+
+            <a href="#">Forgot Password?</a>
+        </div>
+
+
+        <button type="submit" class="btn">Login</button>
+
+        <div class="register link">
+            <p>Dont have an account?
+                <a href="#">Register</a>
+            </p>
+        </div>
+
+    </form>
+</div>
+</main>
+
+
 
 
 
