--- a/loginpage.html
+++ b/loginpage.html
@@ -48,17 +48,17 @@
 </header>
 
 
-<main>
+<main class="login">
 
 <div>
     <form action="">
         <h1>LOGIN</h1>
 
-        <div class="input">
+        <div class="inputbox">
             <input type="text" placeholder="username" required>
         </div>
 
-        <div class="input">
+        <div class="inputbox">
             <input type="password" placeholder="password" required>
         </div>
 
@@ -71,14 +71,15 @@
 
         <button type="submit" class="btn">Login</button>
 
-        <div class="register link">
+        <div class="registerlink">
             <p>Dont have an account?
-                <a href="#">Register</a>
+            <a href="#">Register</a>
             </p>
         </div>
 
     </form>
 </div>
+
 </main>
 
 
