--- a/homepage.html
+++ b/homepage.html
@@ -13,16 +13,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
 </head>
 <body class="homepage">
 <header >
@@ -59,15 +49,16 @@
 
 
 <main>
-    <div>
-        <h1 class="design">
-            Baller's Basket
-        </h1>
+    <section class="design">
+        <div class="text">
+            <h1>BALLER'S BASKET</h1>
+        </div>
     </div>
+    </section>
     
 
     <div class="design1">
-        ___________________________________________________________________________
+        _____________________________________________________________________
         <h2>ALL BY US</h2>
         
     </div>
