--- a/25i-3172/product detail.html
+++ b/25i-3172/product detail.html
@@ -121,7 +121,9 @@
     </section>
 
 
-
+<div style="text-align:center; font-size:14px; opacity:0.7; margin:20px 0;">
+    <p>All images on this page were created using AI.</p>
+</div>
 
 
 
