--- a/checkoutcart.html
+++ b/checkoutcart.html
@@ -3,100 +3,138 @@
 <head>
     <title>Checkout</title>
     <script src="https://cdn.tailwindcss.com"></script>
-     <link rel="stylesheet" href="css/checkout_style.css">
-    
-    
+    <link rel="stylesheet" href="checkout_style.css">
 </head>
 
-<body class="bg-gray-100 p-6 flex justify-center items-center min-h-screen">
+<body class="bg-gray-100 p-6 flex flex-col min-h-screen">
 
-    <div class="bg-white w-full max-w-4xl rounded-lg shadow-lg overflow-hidden">
-
-        <div class="md:flex">
-
-            <!-- Left Section -->
-            <div class="md:w-3/5 p-6 bg-gray-50 space-y-6">
-
-                <h1 class="text-xl font-bold border-b pb-2">Checkout Details</h1>
-
-                <!-- Shipping Info -->
-                <div class="space-y-4">
-                    <h2 class="text-lg font-semibold">1. Shipping Address</h2>
-
-                    <div>
-                        <label class="text-sm">Full Name</label>
-                        <input class="mt-1 w-full p-2 border rounded" placeholder="Aishmal Niazi" required>
-                    </div>
-
-                    <div>
-                        <label class="text-sm">Address</label>
-                        <input class="mt-1 w-full p-2 border rounded" placeholder="xyz street" required>
-                    </div>
-
-                    <div class="grid grid-cols-2 gap-4">
-                        <div>
-                            <label class="text-sm">City</label>
-                            <input class="mt-1 w-full p-2 border rounded" placeholder="Islamabad" required>
-                        </div>
-                        <div>
-                            <label class="text-sm">Postal Code</label>
-                            <input class="mt-1 w-full p-2 border rounded" placeholder="00000" required>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Payment -->
-                <div class="space-y-3 pt-4 border-t">
-                    <h2 class="text-lg font-semibold">2. Payment Method</h2>
-
-                    <label class="flex items-center space-x-2">
-                        <input type="radio" name="payment" checked>
-                        <span>Credit / Debit Card</span>
-                    </label>
-
-                    <label class="flex items-center space-x-2">
-                        <input type="radio" name="payment">
-                        <span>Cash on Delivery (COD)</span>
-                    </label>
-                </div>
-
-                <button class="w-full mt-6 bg-blue-600 text-white p-3 rounded font-semibold hover:bg-blue-700">
-                    Place Order (Rs 1750)
-                </button>
+    <!-- Header -->
+    <header>
+        <nav class="navbar">
+            <div class="left">
+                <a href="homepage.html"><img class="logo" src="images/logo.png"></a>
+                <ul>
+                    <li><a href="">about us</a></li>
+                    <li><a href="">Sell</a></li>
+                    <li><a href="">Accessories</a></li>
+                    <li><a href="">Equipment</a></li>
+                    <li><a href="">Jerseys</a></li>
+                </ul>
             </div>
+            <div class="right">
+                <a href="homepage.html"><img style="height: 34px" src="images/home icon.png"></a>
+                <a href=""><img style="height: 33px" src="images/search icon.png"></a>
+                <a href=""><img style="height: 38px" src="images/profile icon.png"></a>
+                <a href=""><img style="height: 36px" src="images/cart.png"></a>
+            </div>
+        </nav>
+    </header>
 
-            <!-- Right Section -->
-            <div class="md:w-2/5 p-6 border-l">
+    <!-- Main Checkout Card -->
+    <div class="flex-1 flex justify-center items-center">
+        <div class="bg-white w-full max-w-4xl rounded-lg shadow-lg overflow-hidden">
+            <div class="md:flex">
 
-                <h2 class="text-lg font-bold border-b pb-2 mb-4">Order Summary</h2>
+                <!-- Left Section -->
+                <div class="md:w-3/5 p-6 bg-gray-50 space-y-6">
+                    <h1 class="text-xl font-bold border-b pb-2">Checkout Details</h1>
 
-                <div class="flex items-center space-x-3 border-b pb-3 mb-4">
-                    <img src="cover.png" class="w-16 h-16 rounded">
-                    <div class="flex-grow">
-                        <p class="font-semibold">Dunk Proof Basketball</p>
-                        <p class="text-sm text-gray-500">Qty: 1</p>
+                    <!-- Shipping Info -->
+                    <div class="space-y-4">
+                        <h2 class="text-lg font-semibold">1. Shipping Address</h2>
+
+                        <div>
+                            <label class="text-sm">Full Name</label>
+                            <input class="mt-1 w-full p-2 border rounded" placeholder="Aishmal Niazi" required>
+                        </div>
+
+                        <div>
+                            <label class="text-sm">Address</label>
+                            <input class="mt-1 w-full p-2 border rounded" placeholder="xyz street" required>
+                        </div>
+
+                        <div class="grid grid-cols-2 gap-4">
+                            <div>
+                                <label class="text-sm">City</label>
+                                <input class="mt-1 w-full p-2 border rounded" placeholder="Islamabad" required>
+                            </div>
+                            <div>
+                                <label class="text-sm">Postal Code</label>
+                                <input class="mt-1 w-full p-2 border rounded" placeholder="00000" required>
+                            </div>
+                        </div>
                     </div>
-                    <p class="font-semibold">Rs 1500</p>
+
+                    <!-- Payment -->
+                    <div class="space-y-3 pt-4 border-t">
+                        <h2 class="text-lg font-semibold">2. Payment Method</h2>
+
+                        <label class="flex items-center space-x-2">
+                            <input type="radio" name="payment" checked>
+                            <span>Credit / Debit Card</span>
+                        </label>
+
+                        <label class="flex items-center space-x-2">
+                            <input type="radio" name="payment">
+                            <span>Cash on Delivery (COD)</span>
+                        </label>
+                    </div>
+
+                    <button class="w-full mt-6 bg-blue-600 text-white p-3 rounded font-semibold hover:bg-blue-700">
+                        Place Order (Rs 1750)
+                    </button>
                 </div>
 
-                <div class="space-y-2 text-sm">
-                    <div class="flex justify-between">
-                        <span>Subtotal</span>
-                        <span>Rs 1500</span>
+                <!-- Right Section -->
+                <div class="md:w-2/5 p-6 border-l">
+                    <h2 class="text-lg font-bold border-b pb-2 mb-4">Order Summary</h2>
+
+                    <div class="flex items-center space-x-3 border-b pb-3 mb-4">
+                        <img src="cover.png" class="w-16 h-16 rounded">
+                        <div class="flex-grow">
+                            <p class="font-semibold">Dunk Proof Basketball</p>
+                            <p class="text-sm text-gray-500">Qty: 1</p>
+                        </div>
+                        <p class="font-semibold">Rs 1500</p>
                     </div>
-                    <div class="flex justify-between">
-                        <span>Shipping</span>
-                        <span>Rs 250</span>
-                    </div>
-                    <div class="flex justify-between border-t pt-3 text-lg font-bold">
-                        <span>Total</span>
-                        <span>Rs 1750</span>
+
+                    <div class="space-y-2 text-sm">
+                        <div class="flex justify-between">
+                            <span>Subtotal</span>
+                            <span>Rs 1500</span>
+                        </div>
+                        <div class="flex justify-between">
+                            <span>Shipping</span>
+                            <span>Rs 250</span>
+                        </div>
+                        <div class="flex justify-between border-t pt-3 text-lg font-bold">
+                            <span>Total</span>
+                            <span>Rs 1750</span>
+                        </div>
                     </div>
                 </div>
 
             </div>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="mt-6">
+        <a class="foot-left" href="">Contact us<br></a>
+        <p>Retail Stores</p>
+        <p>Awards and Badges</p>
+
+        <div class="footlogo">
+            <a href="homepage.html"><img src="images/logo.png"></a>
+        </div>
+
+        <div class="copyright">&copy; Copyrights reserved by Baller's Basket 2025</div>
+
+        <div class="foot-right">
+            <a href="">Shipping and Deliveries</a>
+            <a href="">Payment</a>
+        </div>
+    </footer>
 
 </body>
 </html>
